# zahner_potentiostat

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml
LICENSES/: numpy  pyserial  scipy
zahner_potentiostat/display/: dcplot.py  onlinedisplay.py
zahner_potentiostat/drivecycle/: HUDDSCOL.py  NYCCCOL.py  cycle_importer.py  sources.txt
zahner_potentiostat/scpi_control/: __init__.py  control.py  datahandler.py  datareceiver.py  error.py  searcher.py  serial_interface.py
